4B/cs444/tests/pass/pass_short.joos
/* pass: short */
public class A {
  public A() {}
  protected short x;
}

