4B/cs444/tests/fail/fail_long.joos
/* fail: long */
public class A {
  protected long x;
}

